--- a/index.html
+++ b/index.html
@@ -47,9 +47,8 @@
   <div class="card">
     <label><strong>Family member</strong></label>
     <select id="userSelect">
-      <option value="Alice">Alice</option>
-      <option value="Bob">Bob</option>
-      <option value="Charlie">Charlie</option>
+      <option value="Mama">Mama</option>
+      <option value="Yu Yu">Yu Yu</option>
     </select>
   </div>
 
