--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-<head <link rel="apple-touch-icon" href="logo.png">
-<link rel="icon" type="image/png" href="logo.png">>
+<head <link rel="apple-touch-icon" href="logo.PNG">
+<link rel="icon" type="image/png" href="logo.PNG">>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Family Meal Tracker</title>
@@ -9,7 +9,7 @@
   <style>
     body 
     <div style="text-align:center; margin-bottom: 12px;">
-  <img src="logo.png" alt="App Logo" style="width:80px; height:80px; border-radius:16px;">
+  <img src="logo.PNG" alt="App Logo" style="width:80px; height:80px; border-radius:16px;">
 </div> {
       font-family: -apple-system, BlinkMacSystemFont, sans-serif;
       background: #f7f7f7;
