--- a/index.html
+++ b/index.html
@@ -7,11 +7,7 @@
   <title>Family Meal Tracker</title>
 
   <style>
-    body 
-    <div style="text-align:center; margin-bottom: 12px;">
-  <img src="logo.PNG" alt="App Logo" style="width:80px; height:80px; border-radius:16px;">
-</div>
-    {
+    body {
       font-family: -apple-system, BlinkMacSystemFont, sans-serif;
       background: #f7f7f7;
       margin: 0;
@@ -47,7 +43,13 @@
 
 <body>
 
-  <h1>🍽️ Family Meal Tracker</h1>
+ <div style="text-align:center; margin-bottom: 12px;">
+  <img src="logo.PNG"
+       alt="Family Meal Tracker"
+       style="width:96px; height:96px; border-radius:20px;">
+</div>
+
+<h1 style="text-align:center;">Family Meal Tracker</h1>
 
   <div class="card">
     <label><strong>Family member</strong></label>
