--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
   </div>
 
   <div class="card">
+    <p style="color:red">DEBUG: camera button below</p>
     <script>
   function openCamera() {
     document.getElementById("mealPhoto").click();
