--- a/index.html
+++ b/index.html
@@ -69,7 +69,10 @@
 <button type="button" onclick="openCamera()">
   📸 Add meal photo
 </button>
-
+<button type="button" onclick="estimateMeal()">
+  🤖 Estimate from photo
+</button>
+    
 <input
   type="file"
   id="mealPhoto"
@@ -161,6 +164,68 @@
   }
 
   loadMeals();
+  async function captionImage(base64Image) {
+  const response = await fetch(
+    "https://api-inference.huggingface.co/models/Salesforce/blip-image-captioning-base",
+    {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ inputs: base64Image })
+    }
+  );
+
+  const result = await response.json();
+  return result[0]?.generated_text || "";
+}
+async function estimateMacros(foodText) {
+  const response = await fetch(
+    "https://api-inference.huggingface.co/models/mistralai/Mistral-7B-Instruct",
+    {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({
+        inputs: `Estimate calories, carbs (g), protein (g), and fat (g) for a typical serving of: ${foodText}. Respond in JSON with keys food, calories, carbs, protein, fat.`
+      })
+    }
+  );
+
+  return await response.json();
+}
+async function estimateMeal() {
+  const file = document.getElementById("mealPhoto").files[0];
+  if (!file) {
+    alert("Please take a photo first.");
+    return;
+  }
+
+  const reader = new FileReader();
+  reader.onload = async () => {
+    const base64 = reader.result.split(",")[1];
+
+    const caption = await captionImage(base64);
+    if (!caption) {
+      alert("Could not recognise food. Please enter manually.");
+      return;
+    }
+
+    foodName.value = caption;
+
+    try {
+      const result = await estimateMacros(caption);
+      const text = result[0].generated_text;
+      const json = JSON.parse(text.match(/\{[\s\S]*\}/)[0]);
+
+      calories.value = json.calories || "";
+      carbs.value = json.carbs || "";
+      protein.value = json.protein || "";
+      fat.value = json.fat || "";
+    } catch {
+      alert("AI estimate incomplete. Please adjust manually.");
+    }
+  };
+
+  reader.readAsDataURL(file);
+}
 </script>
 
 
