--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ async function estimateMacros(foodText) {
   return await response.json();
 }
 
-async function estimateMeal() {
+async function estimateMeal() alert ("Caption: "+ Caption);{
   const file = document.getElementById("mealPhoto").files[0];
   if (!file) {
     alert("Please take a photo first.");
